> used css grid and flexbox to help with formatting card for desktop changed width of the main-header and main-paragraph to align text to the left added a media querie for the desktop screen size fixed the alignment of the text for desktop '

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,12 +28,12 @@ body {
   background-size: 100%;
   background-repeat: no-repeat;
   background-position: center;
-  min-height: 27vh;
+  min-height: 25vh;
 }
 
 .img-overlay {
   width: 375px;
-  min-height: 27vh;
+  min-height: 25vh;
   background-color: rgba(108, 25, 203, 0.56);
 }
 
@@ -47,12 +47,23 @@ body {
   width: 260px;
   margin: auto;
   text-align: center;
+  color: hsla(0, 0%, 100%, 0.75);
+  line-height: 24px;
 }
 
-.main-header {
-  width: 300px;
+.stats {
+  width: 90px;
   margin: auto;
   text-align: center;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.stats-headings {
+  color: hsla(0, 0%, 100%, 0.6);
+  text-transform: uppercase;
+  font-weight: lighter;
+  font-size: 15px;
 }
 
 .violet-text {
@@ -72,4 +83,175 @@ body {
   row-gap: 25px;
   padding-bottom: 28px;
   border-radius: 8px;
+}
+
+/* very small */
+@media screen and (max-width: 360px) {
+  .img {
+    min-height: 28vh;
+    width: 320px;
+  }
+
+  .img-overlay {
+    min-height: 28vh;
+    width: 320px;
+  }
+
+  .container {
+    width: 320px;
+  }
+}
+
+/* small */
+@media screen and (min-width: 361px) and (max-width: 480px) {
+  .img {
+    min-height: 29vh;
+    width: 320px;
+  }
+
+  .img-overlay {
+    min-height: 29vh;
+    width: 320px;
+  }
+
+  .container {
+    width: 320px;
+  }
+}
+
+/* Medium-only */
+@media screen and (min-width: 481px) and (max-width: 960px) {
+  .img {
+    min-height: 29vh;
+    width: 320px;
+  }
+
+  .img-overlay {
+    min-height: 29vh;
+    width: 320px;
+  }
+
+  .container {
+    width: 320px;
+  }
+}
+
+@media screen and (min-width: 960px) {
+  .img {
+    width: 400px;
+    background: url(/images/image-header-desktop.jpg);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 0px 5px 5px 0px;
+  }
+
+  .img-overlay {
+    width: 40px;
+  }
+
+  .container {
+    width: 35%;
+    margin: auto;
+  }
+
+  .container .card-preview {
+    display: flex;
+    flex-direction: row-reverse;
+    width: 900px;
+    height: 25vh;
+    justify-content: space-between;
+  }
+
+  .card-content {
+    display: grid;
+    gap: 20px;
+    width: 50%;
+  }
+
+  .main {
+    display: grid;
+    gap: 10px;
+    margin: 38px 0px 0px 4px;
+  }
+
+  .main-header {
+    width: 400px;
+    text-align: left;
+  }
+
+  .main-paragraph {
+    width: 400px;
+    text-align: left;
+  }
+
+  .stats-container {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .stats {
+    text-align: left;
+  }
+
+  /* .container {
+    margin: auto;
+  }
+
+  .container .img,
+  .container .img-overlay {
+    border-radius: 0px 5px 5px 0px;
+  }
+
+  .container .img {
+    min-height: 30px;
+  }
+
+  .container .img-overlay {
+    width: 400px;
+    min-height: 26vh;
+  }
+
+  .container .card-preview {
+    display: flex;
+    flex-direction: row-reverse;
+    padding: 0px;
+    height: 26vh;
+  }
+
+  .main {
+    margin: 38px 0px 0px 65px;
+    display: grid;
+  }
+
+  #main-header {
+    text-align: left;
+    width: 350px;
+  }
+
+  #main-paragraph {
+    text-align: left;
+    width: 350px;
+    color: hsla(0, 0%, 100%, 0.75);
+  }
+
+  .card-content {
+    width: 500px;
+    display: grid;
+    gap: 40px;
+  }
+
+  .stats-container {
+    display: flex;
+  }
+
+  .stats-container .stats {
+    font-size: 20px;
+    width: 10px;
+    margin: 0 65px 0 68px;
+  }
+
+  .stats-container .stats-headings {
+    font-size: 12px;
+  } */
 }
